[package]
name = "volt"
version = "0.1.0"
authors = ["KiraCoding"]
edition = "2021"
rust-version = "1.77.0"
description = "Webview based Discord client"
license = "GPL-3.0-only"

[dependencies]
anyhow = { version = "1.0.86" }
directories = { version = "5.0.1" }
open = { version = "5.3.0" }
tao = { version = "0.28.1" }
wry = { version = "0.41.0" }

[build-dependencies]
oxc = { version = "0.23.1", features = ["transformer", "codegen"] }

[profile.release]
codegen-units = 1
strip = true
lto = true
